<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

        <EditText
            android:id="@+id/building_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText
            android:id="@+id/building_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_address"
            android:layout_below="@+id/building_name"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/building_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/building_address"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText
            android:id="@+id/building_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:layout_below="@+id/building_image"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnadd"
            android:id="@+id/btnadd"
            android:layout_below="@+id/building_description"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btncancel"
            android:layout_toRightOf="@+id/btnadd"
            android:layout_below="@+id/building_description"/>
</RelativeLayout>