<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delete_building_name_placeholder"
        android:id="@+id/delete_building_name"></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btndel"
        android:layout_below="@+id/delete_building_name"
        android:text="@string/delete"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_delete"
        android:layout_below="@+id/delete_building_name"
        android:text="@string/cancel"
        android:layout_toRightOf="@+id/btndel">
    </Button>
</RelativeLayout>